- fixed: some form elements would not be properly aligned in Safari and FF3 on the server card; updated styles and implemented logic to apply different classes depending on the browser used (closes CN-40)

--- a/src/corelib/js/resources/css/de-intrabuild-groupware-email-EmailAccountDialog.css
+++ b/src/corelib/js/resources/css/de-intrabuild-groupware-email-EmailAccountDialog.css
@@ -27,6 +27,14 @@
 .de-intrabuild-groupware-email-EmailAccountDialog-accountGrid {
     margin-bottom:5px;
 }
+
+.de-intrabuild-groupware-email-EmailAccountDialog-serverCard-col1 {
+    width:180px;
+}
+
+.de-intrabuild-groupware-email-EmailAccountDialog-serverCard-col2 {
+    width:80px;
+}
      
 .de-intrabuild-groupware-email-EmailAccountDialog-accountGrid .x-grid3-row {
     border:none;
