--- a/src/corelib/js/resources/css/de-intrabuild.css
+++ b/src/corelib/js/resources/css/de-intrabuild.css
@@ -48,6 +48,10 @@
 .de-intrabuild-margin-l-15 {
     margin-left:15px;
 }        
+
+.de-intrabuild-margin-l-25 {
+    margin-left:25px;
+}
         
 .de-intrabuild-margin-b-10 {
     margin-bottom:10px;
